--- a/.github/workflows/python-api-docs.yaml
+++ b/.github/workflows/python-api-docs.yaml
@@ -22,31 +22,32 @@ jobs:
 
       - name: "Configure Git safe directory"
         run: git config --global --add safe.directory /__w/bdk-python/bdk-python
-      
+
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
+
+      - name: "Install uv"
+        uses: astral-sh/setup-uv@v7
 
       - name: "Set up Rust"
         uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
         with:
           cache: true
           rust-src-dir: ${{ github.workspace }}/bdk-ffi/bdk-ffi
-        
+
       - name: "Generate bdk.py"
-        env:
-          PYBIN: ${{ env.pythonLocation }}/bin
         run: bash ./scripts/generate-linux.sh
 
-      - name: "Install Sphinx and Theme"
-        run: pip3 install sphinx sphinx_rtd_theme
+      - name: "Install docs dependencies"
+        run: uv sync --frozen --group dev
 
       - name: "Generate python API Documentation"
-        run: python3 ./docs/generate_docs.py
-          
+        run: uv run python ./docs/generate_docs.py
+
       - name: "Build HTML Documentation"
-        run: python3 -m sphinx -b html -W --keep-going docs/source docs/_build/html
+        run: uv run python -m sphinx -b html -W --keep-going docs/source docs/_build/html
 
       - name: "Upload API Docs"
         uses: actions/upload-artifact@v4
