--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -31,21 +31,21 @@ jobs:
 
       - name: "Configure Git safe directory"
         run: git config --global --add safe.directory /__w/bdk-python/bdk-python
-          
+
+      - name: "Install uv"
+        uses: astral-sh/setup-uv@v7
+
       - name: "Set up Rust"
         uses: actions-rust-lang/setup-rust-toolchain@v1
 
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-linux.sh
 
-      - name: "Install build"
-        run: ${PYBIN}/pip install build
-
       - name: "Build wheel"
-        run: ${PYBIN}/python -m build --wheel --config-setting=--build-option=--plat-name=manylinux_2_28_x86_64 --verbose
+        run: UV_PYTHON=${PYBIN}/python uv build --wheel -C=--build-option=--plat-name=manylinux_2_28_x86_64 -v
 
       - name: "Install wheel"
-        run: ${PYBIN}/pip install ./dist/*.whl
+        run: uv pip install --python ${PYBIN}/python ./dist/*.whl
 
       - name: "Run tests"
         run: ${PYBIN}/python -m unittest discover --start "./tests/" --pattern "test_offline_*.py" --verbose
@@ -54,7 +54,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bdkpython-manylinux_2_28_x86_64-${{ matrix.python }}
-          path: /home/runner/work/bdk-python/bdk-python/dist/*.whl
+          path: dist/*.whl
 
   build-macos-arm64-wheels:
     name: "Build and test macOS arm64 wheels"
@@ -78,32 +78,31 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
-      
+
+      - name: "Install uv"
+        uses: astral-sh/setup-uv@v7
+
       - name: "Set up Rust"
         uses: actions-rust-lang/setup-rust-toolchain@v1
-      
+
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-macos-arm64.sh
-
-      - name: "Install build"
-        run: pip3 install build
 
       - name: "Build wheel"
         # Specifying the plat-name argument is necessary to build a wheel with the correct name,
         # see issue #350 for more information
-        run: python3 -m build --wheel --config-setting=--build-option=--plat-name=macosx_11_0_arm64 --verbose
+        run: uv build --wheel -C=--build-option=--plat-name=macosx_11_0_arm64 -v
 
-      # You can't install the arm64 wheel on the CI, so we skip these steps and simply test that the wheel builds
       - name: "Install wheel and run tests"
         run: |
-          pip3 install ./dist/*.whl
+          uv pip install --python python3 ./dist/*.whl
           python3 -m unittest discover --start "./tests/" --pattern "test_offline_*.py" --verbose
 
       - name: "Upload artifact test"
         uses: actions/upload-artifact@v4
         with:
           name: bdkpython-macos-arm64-${{ matrix.python }}
-          path: /Users/runner/work/bdk-python/bdk-python/dist/*.whl
+          path: dist/*.whl
 
   build-macos-x86_64-wheels:
     name: "Build and test macOS x86_64 wheels"
@@ -127,20 +126,20 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
+      - name: "Install uv"
+        uses: astral-sh/setup-uv@v7
+
       - name: "Set up Rust"
         uses: actions-rust-lang/setup-rust-toolchain@v1
 
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-macos-x86_64.sh
 
-      - name: "Install build"
-        run: pip3 install build
-
       - name: "Build wheel"
-        run: python3 -m build --wheel --config-setting=--build-option=--plat-name=macosx_11_0_x86_64 --verbose
+        run: uv build --wheel -C=--build-option=--plat-name=macosx_11_0_x86_64 -v
 
       - name: "Install wheel"
-        run: pip3 install ./dist/*.whl
+        run: uv pip install --python python3 ./dist/*.whl
 
       - name: "Run tests"
         run: python3 -m unittest discover --start "./tests/" --pattern "test_offline_*.py" --verbose
@@ -149,7 +148,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bdkpython-macos-x86_64-${{ matrix.python }}
-          path: /Users/runner/work/bdk-python/bdk-python/dist/*.whl
+          path: dist/*.whl
 
   build-windows-wheels:
     name: "Build and test Windows wheels"
@@ -174,26 +173,26 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
+      - name: "Install uv"
+        uses: astral-sh/setup-uv@v7
+
       - name: "Set up Rust"
         uses: actions-rust-lang/setup-rust-toolchain@v1
-        
+
       - name: "Generate bdk.py and binaries"
         run: bash ./scripts/generate-windows.sh
 
-      - name: "Install build"
-        run: pip install build
-
       - name: "Build wheel"
-        run: python -m build --wheel --verbose
+        run: uv build --wheel -v
 
       - name: "Upload artifact test"
         uses: actions/upload-artifact@v4
         with:
           name: bdkpython-windows-${{ matrix.python }}
-          path: D:\a\bdk-python\bdk-python\dist\*.whl
+          path: dist/*.whl
 
       - name: "Install dependencies"
-        run: Get-ChildItem 'D:\a\bdk-python\bdk-python\dist\*.whl' | ForEach-Object {pip install $_.FullName}
+        run: Get-ChildItem 'D:\a\bdk-python\bdk-python\dist\*.whl' | ForEach-Object {uv pip install --python python $_.FullName}
         shell: powershell
 
       - name: "Run tests"
@@ -213,8 +212,8 @@ jobs:
       - name: "Configure Git safe directory"
         run: git config --global --add safe.directory /__w/bdk-python/bdk-python
 
-      - name: "Install Ruff"
-        run: curl -LsSf https://astral.sh/ruff/install.sh | sh
+      - name: "Install uv"
+        uses: astral-sh/setup-uv@v7
 
       - name: "Lint test targets"
-        run: ruff check ./tests/
+        run: uvx ruff check ./tests/
