--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,11 @@ bdkpython = ["libbdkffi.*"]
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
+
+[dependency-groups]
+dev = [
+    "pytest==7.1.2",
+    "sphinx>=8.1.3",
+    "sphinx-rtd-theme>=3.1.0",
+    "tox==3.25.1",
+]
