--- a/.github/workflows/publish-python.yaml
+++ b/.github/workflows/publish-python.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: "Build wheel"
         # Specifying the plat-name argument is necessary to build a wheel with the correct name,
         # see issue #350 for more information
-        run: UV_PYTHON=${PYBIN}/python uv build --wheel -C=--build-option=--plat-name=manylinux_2_28_x86_64 -v
+        run: UV_PYTHON=${PYBIN}/python uv build --wheel --config-setting=--build-option=--plat-name=manylinux_2_28_x86_64 --verbose
 
       - uses: actions/upload-artifact@v4
         with:
@@ -84,7 +84,7 @@ jobs:
       - name: "Build wheel"
         # Specifying the plat-name argument is necessary to build a wheel with the correct name,
         # see issue #350 for more information
-        run: uv build --wheel -C=--build-option=--plat-name=macosx_11_0_arm64 -v
+        run: uv build --wheel --config-setting=--build-option=--plat-name=macosx_11_0_arm64 --verbose
 
       - name: "Upload artifacts"
         uses: actions/upload-artifact@v4
@@ -127,7 +127,7 @@ jobs:
       - name: "Build wheel"
         # Specifying the plat-name argument is necessary to build a wheel with the correct name,
         # see issue #350 for more information
-        run: uv build --wheel -C=--build-option=--plat-name=macosx_11_0_x86_64 -v
+        run: uv build --wheel --config-setting=--build-option=--plat-name=macosx_11_0_x86_64 --verbose
 
       - uses: actions/upload-artifact@v4
         with:
@@ -166,7 +166,7 @@ jobs:
         run: bash ./scripts/generate-windows.sh
 
       - name: "Build wheel"
-        run: uv build --wheel -v
+        run: uv build --wheel --verbose
 
       - name: "Upload artifacts"
         uses: actions/upload-artifact@v4
