--- a/.github/workflows/test-bdk-ffi-latest.yaml
+++ b/.github/workflows/test-bdk-ffi-latest.yaml
@@ -61,7 +61,7 @@ jobs:
         run: bash ./scripts/generate-linux.sh
 
       - name: "Build wheel"
-        run: UV_PYTHON=${PYBIN}/python uv build --wheel -C=--build-option=--plat-name=manylinux_2_28_x86_64 -v
+        run: UV_PYTHON=${PYBIN}/python uv build --wheel --config-setting=--build-option=--plat-name=manylinux_2_28_x86_64 --verbose
 
       - name: "Install wheel"
         run: uv pip install --system --python ${PYBIN}/python ./dist/*.whl
@@ -112,7 +112,7 @@ jobs:
       - name: "Build wheel"
         # Specifying the plat-name argument is necessary to build a wheel with the correct name,
         # see issue #350 for more information
-        run: uv build --wheel -C=--build-option=--plat-name=macosx_11_0_arm64 -v
+        run: uv build --wheel --config-setting=--build-option=--plat-name=macosx_11_0_arm64 --verbose
 
       - name: "Install wheel"
         run: uv pip install --system --python python3 ./dist/*.whl
@@ -160,7 +160,7 @@ jobs:
         run: bash ./scripts/generate-macos-x86_64.sh
 
       - name: "Build wheel"
-        run: uv build --wheel -C=--build-option=--plat-name=macosx_11_0_x86_64 -v
+        run: uv build --wheel --config-setting=--build-option=--plat-name=macosx_11_0_x86_64 --verbose
 
       - name: "Install wheel"
         run: uv pip install --system --python python3 ./dist/*.whl
@@ -209,7 +209,7 @@ jobs:
         run: bash ./scripts/generate-windows.sh
 
       - name: "Build wheel"
-        run: uv build --wheel -v
+        run: uv build --wheel --verbose
 
       - name: "Install dependencies"
         run: Get-ChildItem 'D:\a\bdk-python\bdk-python\dist\*.whl' | ForEach-Object {uv pip install --system --python python $_.FullName}
